# KG-Downloader

./: pyproject.toml
.devcontainer/: devcontainer.json
downloads/: First Love.json  MY ALL.json  One Love.json  傷あとをたどれば.json  因为爱情.json  愛唄.json
scripts/: install.sh  kg-download.py
src/: info.json  scraper.py
src/downloads/: First Love.json  Unknown.json  不谓侠.json  因为爱情.json
